[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = "1.33.0"
postgres-connector-types = { git = "https://github.com/grafbase/grafbase", branch = "main" }
# tokio-postgres = { git = "https://github.com/grafbase/rust-postgres", default-features = false, features = ["js"] }
worker = "0.0.18"
futures = "0.3.29"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"

[profile.release]
lto = true
strip = true
codegen-units = 1
